--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-[auto_1fr_auto] min-h-screen">
+<div class="grid grid-cols-[auto_1fr_auto] min-h-screen w-full">
   <!-- Left Side Panel -->
   <div class="w-60 bg-white shadow-lg h-screen fixed left-0 top-0 p-6">
     <app-left-side-panel></app-left-side-panel>
