--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="fixed bottom-0 left-0 w-full bg-gray-800 text-white p-3 text-center shadow-md">
+<footer class=" bottom-0 left-0 w-full bg-gray-800 text-white p-3 text-center shadow-md">
   <p class="text-xs">&copy; 2025 User Management System. All Rights Reserved.</p>
 </footer>
