--- a/src/app/shared/left-side-panel/left-side-panel.component.html
+++ b/src/app/shared/left-side-panel/left-side-panel.component.html
@@ -15,7 +15,7 @@
 
 <!-- Sidebar -->
 <div
-  class="z-50 bg-slate-50 shadow-lg transform transition-transform duration-300 ease-in-out
+  class="z-50 rounded-lg bg-slate-50 shadow-lg transform transition-transform duration-300 ease-in-out
          fixed top-0 left-0 h-screen w-64 p-6
          md:relative md:h-screen md:translate-x-0 md:shadow-none md:block"
   [ngClass]="{
@@ -26,22 +26,26 @@
   <!-- Logo -->
   <div class="flex flex-col items-center mb-6 space-y-2">
     <img src="assets/images/immune-system.png" alt="Menu Icon" class="w-12 h-12 object-contain rounded-full bg-sky-300" />
-    <h2 class="text-3xl font-black text-gray-700">PCRIM</h2>
+    <h2 class="text-3xl font-black text-teal-700">PCRIM</h2>
   </div>
 
   <!-- Navigation -->
   <nav class="flex flex-col space-y-3">
-    <button routerLink="/users/appointments"
-      class="flex items-center px-4 py-3 text-gray-700 hover:bg-gray-100 rounded-lg transition">
+    <button routerLink="/ob-gyne/appointments"
+      class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition">
       Appointments
     </button>
 
-    <button routerLink="/users/children" routerLinkActive="active"
-      class="flex items-center px-4 py-3 text-gray-700 hover:bg-gray-100 rounded-lg transition">
-      Children
+    <button routerLink="/ob-gyne/prenatal" routerLinkActive="active"
+      class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition">
+      Prenatal
+    </button>
+    <button routerLink="/ob-gyne/children" routerLinkActive="active"
+    class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition">
+    Children
     </button>
 
-    <button class="flex items-center px-4 py-3 text-gray-700 hover:bg-gray-100 rounded-lg transition">
+    <button class="flex items-center px-4 py-3 text-gray-700 hover:bg-blue-100 rounded-lg transition">
       Messages
     </button>
   </nav>
