passing motherID problem

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,11 +2,11 @@
   <!-- Left Side - Background Image Section -->
   <div
     class="relative flex flex-col items-center justify-center p-12 text-center text-white bg-cover bg-center shadow-2xl rounded-lg w-5/6 hidden md:flex"
-    style="background-image: url('assets/images/loginbg.jpg');">
+    style="background-image: url('assets/images/bg.jpg');">
   </div>
 
 <!-- Right Side - Login Form -->
-<div class="w-full md:w-1/2 flex flex-col justify-center items-center p-12 bg-slate-100 shadow-2xl border border-gray-200 rounded-lg">
+<div class="w-full md:w-1/2 flex flex-col justify-center items-center p-12 bg-slate-100  border border-gray-200  rounded-lg">
   <!-- Image Container -->
   <div class="w-48 flex justify-center mb-6">
     <img src="assets/images/immune-system.png" alt="Immune System" class=" h-auto " [routerLink]="['/setup-user']" routerLinkActive="router-link-active" >
