--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
   <!-- Left Side - Background Image Section -->
   <div
     class="relative flex flex-col items-center justify-center p-12 text-center text-white bg-cover bg-center shadow-2xl rounded-lg w-5/6 hidden md:flex"
-    style="background-image: url('assets/images/bg.jpg');">
+    style="background-image: url('assets/images/motherandson.png');">
   </div>
 
 <!-- Right Side - Login Form -->
@@ -33,7 +33,8 @@
     class="flex items-center justify-center w-60 p-3 rounded-lg border border-gray-300 bg-white text-gray-700 font-medium hover:bg-gray-100 transition-all shadow-sm"
     [disabled]="loading">
     <img src="assets/images/google.png" class="w-10 h-10 mr-3" alt="Google">
-    Sign in with Google
+    <span *ngIf="!loading">Sign in with Google</span>
+    <span *ngIf="loading">Signing in...</span>
   </button>
 
   <!-- Facebook Sign-In Button -->
